hphp/test/quick/neg_iva.hhas.expectf
Fatal error: Assembler Error: line 22: couldn't convert input argument (-1) to proper type in %s on line -1
